--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,10 @@
         <div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation"><a href="http://www.aicbt.com">AICBT Ltd</a></li>
+                    <li role="presentation"><a href="http://jksinton.com">jksinton</a></li>
                 </ul>
             </nav>
-            <h3 class="text-muted">LittleSleeper</h3>
+            <h3 class="text-muted">LittleSleeper2</h3>
         </div>
 
         <!-- current status -->
